feat: update app name and slug, enhance theme management, and improve user interface components

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "InventorySystem",
-    "slug": "InventorySystem",
+    "name": "Il Vento",
+    "slug": "ilvento",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
