--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EXPO_PUBLIC_JWT_KEY=12345
 EXPO_PUBLIC_API_URL=https://inventory-system-server-cs304.onrender.com
+EXPO_PUBLIC_API_DEVURL=http://192.168.254.110:3000
